fix(client: vpp-imagelist): don't overlap download button

--- a/client/app/styles/less/verifiedpixel.less
+++ b/client/app/styles/less/verifiedpixel.less
@@ -19,7 +19,6 @@
     &.preview-layout {
         .preview-pane {
             background: #d0d0d0;
-            width: 480px;
         }
     }
     .list-pane {
@@ -239,7 +238,7 @@
             &.izitru {
                 background: url(../../images/verification/izitru.svg) no-repeat center center transparent;
                 background-size: 100%;
-				border-radius: 2px;
+				border-radius: 3px;
                 span {
                     position: absolute;
                     top: -4px;
